# obs-integrations-fields-insights

./: .gitignore  Dockerfile  README.md  example.env  graph.py  pyproject.toml
graph/: consts.py  state.py
graph/chains/: alert_threshold_generator.py  answer_grader.py  generation.py  hallucination_grader.py  relevance_summarizer.py  researcher.py  researcher_config.json  retriever_grader.py  search_query_generator.py  search_topic_generator.py
graph/chains/tests/: test_chain.py  test_utils.py
graph/nodes/: __init__.py  alert_threshold_generator.py  configuration.py  grade_documents.py  ingestion.py  obs_relevance.py  research_data_persistance.py  researcher_parallel.py  retrieve.py  search_query.py  search_topic.py
graph/nodes/tests/: test_node.py
